<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- Добавляем groupId -->
	<groupId>com.study_oop</groupId> <!-- уникальный идентификатор -->
	<artifactId>Laba_9</artifactId> <!-- Артефакт проекта -->
	<version>1.0.0</version> <!-- Версия проекта -->
	<packaging>jar</packaging> <!-- Упаковка в JAR -->

	<name>Laba_9</name> <!-- Имя проекта -->
	<description>Laba_9</description> <!-- Описание проекта -->

	<!-- Свойства -->
	<properties>
		<!-- Указание версии JDK для компиляции -->
		<maven.compiler.source>23</maven.compiler.source>
		<maven.compiler.target>23</maven.compiler.target>
	</properties>

	<!-- Зависимости -->
	<dependencies>
		<!-- зависимости JasperReports -->
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>7.0.1</version> <!-- Укажите актуальную версию JasperReports -->
		</dependency>

		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports-jaxen</artifactId>
			<version>7.0.1</version> <!-- Укажите актуальную версию -->
		</dependency>

		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports-pdf</artifactId>
			<version>7.0.1</version>
		</dependency>

  		 <!-- Unit тестирование-->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<!-- Плагины для сборки проекта -->
	<build>
		<plugins>
			<!-- Плагин для компиляции -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>23</source>
					<target>23</target>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.desktop</arg> <!-- Для Taskbar -->
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- Плагин для создания JAR файла -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>

			<!-- Плагин для тестирования -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
		</plugins>
	</build>

</project>
